--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
     "grunt-contrib-jshint": "^0.10.0",
-    "grunt-contrib-watch": "^0.6.1"
+    "grunt-contrib-watch": "^0.6.1",
+    "express": "^4.10.4",
+    "mongoose": "^3.8.19"
   }
 }
