--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "grunt-contrib-watch": "^0.6.1",
     "express": "^4.10.4",
     "mongoose": "^3.8.19",
-    "body-parser": "^1.9.3"
+    "body-parser": "^1.9.3",
+    "mongoose-shortid": "^0.4.2",
+    "shortid": "^2.1.3",
+    "ejs": "^1.0.0",
+    "mongoose-random": "^0.1.1",
+    "mongoose-simple-random": "^0.3.0"
   }
 }
