--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "shortid": "^2.1.3",
     "ejs": "^1.0.0",
     "mongoose-random": "^0.1.1",
-    "mongoose-simple-random": "^0.3.0"
+    "mongoose-simple-random": "^0.3.0",
+    "serve-favicon": "^2.1.7"
   }
 }
