--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "ejs": "^1.0.0",
     "mongoose-random": "^0.1.1",
     "mongoose-simple-random": "^0.3.0",
-    "serve-favicon": "^2.1.7"
+    "serve-favicon": "^2.1.7",
+    "dateformat": "^1.0.11"
   }
 }
