--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongoose-random": "^0.1.1",
     "mongoose-simple-random": "^0.3.0",
     "serve-favicon": "^2.1.7",
-    "dateformat": "^1.0.11"
+    "dateformat": "^1.0.11",
+    "grunt-contrib-sass": "^0.8.1"
   }
 }
