--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose-simple-random": "^0.3.0",
     "serve-favicon": "^2.1.7",
     "dateformat": "^1.0.11",
-    "grunt-contrib-sass": "^0.8.1"
+    "grunt-contrib-sass": "^0.8.1",
+    "passport-twitter": "^1.0.2"
   }
 }
