--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "serve-favicon": "^2.1.7",
     "dateformat": "^1.0.11",
     "grunt-contrib-sass": "^0.8.1",
-    "passport-twitter": "^1.0.2"
+    "passport-twitter": "^1.0.2",
+    "socket.io": "^1.2.1",
+    "express.io": "^1.1.13",
+    "twitter": "^1.0.3"
   }
 }
